--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,8 +34,11 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:3000
       
-      - name: Deploy to fly.io
+      - name: Prepare to deploy to fly.io
         uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
+        if: ${{ github.event_name == 'push' }}
+      - name: Deploy to fly.io
+        run: flyctl deploy --remote-only
+        if: ${{ github.event_name == 'push' }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
