--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
+    outputs:
+      skip_deploy: ${{ steps.check_for_skip.outputs.skip }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4      
@@ -34,17 +36,35 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:3000
       
+      - name: Extract last commit message
+        id: last_commit
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        run: |
+          last_commit_message=$(echo $COMMIT_MESSAGES | jq -r '.[-1]')
+          echo "::set-output name=message::$last_commit_message"
+
+      - name: Check for skip deploy
+        id: check_for_skip
+        run: |
+          last_commit_message="${{ steps.last_commit.outputs.message }}"
+          if [[ $last_commit_message == *"#skip"* ]]; then
+            echo "::set-output name=skip::true"
+          else
+            echo "::set-output name=skip::false"
+          fi 
+      
       - name: Prepare to deploy to fly.io
         uses: superfly/flyctl-actions/setup-flyctl@master
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' && steps.check_for_skip.outputs.skip == 'false' }}
       - name: Deploy to fly.io
         run: flyctl deploy --remote-only
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' && steps.check_for_skip.outputs.skip == 'false'}}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
   tag_release:
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' && needs.simple_deployment_pipeline.outputs.skip_deploy == 'false' }}
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
