--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,8 +13,10 @@ on:
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
+    env:
+      SKIP_DEPLOY: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') && 'true' || 'false' }}
     outputs:
-      skip_deploy: ${{ steps.check_for_skip.outputs.skip }}
+      skip_deploy: ${{ env.SKIP_DEPLOY }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4      
@@ -36,21 +38,12 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:3000
       
-      - name: Determine if deployment should be skipped
-        id: check_for_skip
-        run: |
-          if contains(join(github.event.commits.*.message, ' '), '#skip'); then
-            echo "skip=true" >> $GITHUB_OUTPUT
-          else
-            echo "skip=false" >> $GITHUB_OUTPUT
-          fi
-      
       - name: Prepare to deploy to fly.io
         uses: superfly/flyctl-actions/setup-flyctl@master
-        if: ${{ github.event_name == 'push' && steps.check_for_skip.outputs.skip == 'false' }}
+        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOY == 'false' }}
       - name: Deploy to fly.io
         run: flyctl deploy --remote-only
-        if: ${{ github.event_name == 'push' && steps.check_for_skip.outputs.skip == 'false'}}
+        if: ${{ github.event_name == 'push' && env.SKIP_DEPLOY == 'false' }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
