Update error message in pipeline.yml

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,7 +34,8 @@ jobs:
         uses: rjstone/discord-webhook-notify@v1
         with:
           severity: error
-          details: Build failed!
+          text: Build failed!
+          details: ${{ github.event.commits }}
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
       - name: Test
