Update error message in pipeline.yml

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,7 +35,8 @@ jobs:
         with:
           severity: error
           text: Build failed!
-          details: ${{ github.event.commits }}
+          description: 'commit: ${{ github.sha }}'
+          details: ''
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
       - name: Test
