--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,9 @@ jobs:
       - name: Get Committer Username
         id: get_username
         run: |
-          echo "username=$(git log -1 --pretty=format:'%cn')" >> $GITHUB_OUTPUT  
+          COMMITTER_NAME=$(git log -2 --pretty=format:'%cn' | tail -n 1)
+          echo "Committer Name: $COMMITTER_NAME"
+          echo "username=$COMMITTER_NAME" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT  # For debugging
 
       - name: Print Committer Username
