--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm run eslint
       - name: Build
         id: build
-        run: exit 1 # simulate build failure
+        run: npm run build
       - name: Broadcast to Discord if build failed
         if: ${{ failure() && steps.build.outcome == 'failure' }}
         uses: rjstone/discord-webhook-notify@v1
