--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,6 +17,8 @@ jobs:
       SKIP_DEPLOY: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') && 'true' || 'false' }}
     outputs:
       skip_deploy: ${{ env.SKIP_DEPLOY }}
+      committer_name: ${{ steps.get_username.outputs.username }}
+      deployed_url: ${{ steps.deploy.outputs.deployed_url }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -65,7 +67,11 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
         if: ${{ github.event_name == 'push' && env.SKIP_DEPLOY == 'false' }}
       - name: Deploy to fly.io
-        run: flyctl deploy --remote-only
+        id: deploy
+        run: |
+          flyctl deploy --remote-only | tee deploy-output.txt
+          URL=$(grep -o 'https://[^ ]*' deploy-output.txt | tail -1)
+          echo "deployed_url=$URL" >> $GITHUB_OUTPUT
         if: ${{ github.event_name == 'push' && env.SKIP_DEPLOY == 'false' }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -91,5 +97,7 @@ jobs:
         if: success()
         with:
           severity: info
-          details: New version deployed!
+          text: A new version of Pokedex deployed!
+          description: |
+            to ${{ needs.simple_deployment_pipeline.outputs.deployed_url }} by ${{ needs.simple_deployment_pipeline.outputs.committer_name }}.
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
