--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,8 +17,20 @@ jobs:
       SKIP_DEPLOY: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') && 'true' || 'false' }}
     outputs:
       skip_deploy: ${{ env.SKIP_DEPLOY }}
+      committer_name: ${{ steps.get_username.outputs.username }}
+      deployed_url: ${{ steps.deploy.outputs.deployed_url }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+    
+      - name: Get Committer Username
+        id: get_username
+        run: |
+          COMMITTER_NAME=$(git log -2 --pretty=format:'%cn' | tail -n 1)
+          echo "Committer Name: $COMMITTER_NAME"
+          echo "username=$COMMITTER_NAME" >> $GITHUB_OUTPUT
+      
       - uses: actions/setup-node@v4      
         with:          
           node-version: '20'
@@ -27,7 +39,20 @@ jobs:
       - name: Check style
         run: npm run eslint
       - name: Build
+        id: build
         run: npm run build
+      - name: Broadcast to Discord if build failed
+        if: ${{ failure() && steps.build.outcome == 'failure' }}
+        uses: rjstone/discord-webhook-notify@v1
+        with:
+          severity: error
+          text: Build failed!
+          description: |
+            commit
+            https://github.com/${{ github.repository }}/commit/${{ github.event.pull_request.head.sha }} by ${{ steps.get_username.outputs.username }} broke the build.
+          details: ''
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+
       - name: Test
         run: npm run test
 
@@ -42,7 +67,11 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
         if: ${{ github.event_name == 'push' && env.SKIP_DEPLOY == 'false' }}
       - name: Deploy to fly.io
-        run: flyctl deploy --remote-only
+        id: deploy
+        run: |
+          flyctl deploy --remote-only | tee deploy-output.txt
+          URL=$(grep -o 'https://[^ ]*' deploy-output.txt | tail -1)
+          echo "deployed_url=$URL" >> $GITHUB_OUTPUT
         if: ${{ github.event_name == 'push' && env.SKIP_DEPLOY == 'false' }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -68,5 +97,7 @@ jobs:
         if: success()
         with:
           severity: info
-          details: New version deployed!
+          text: A new version of Pokedex deployed!
+          description: |
+            to ${{ needs.simple_deployment_pipeline.outputs.deployed_url }} by ${{ needs.simple_deployment_pipeline.outputs.committer_name }}.
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
