--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,12 +21,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 5
     
       - name: Get Committer Username
         id: get_username
         run: |
-          COMMITTER_NAME=$(git log -1 --pretty=format:'%an' | tail -n 1)
+          git log -5
+          COMMITTER_NAME=$(git log -2 --pretty=format:'%an' | tail -n 1)
           echo "Committer Name: $COMMITTER_NAME"
           echo "username=$COMMITTER_NAME" >> $GITHUB_OUTPUT
       
