--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm run eslint
       - name: Build
         id: build
-        run: exit 1 #run: npm run build
+        run: npm run build
       - name: Broadcast to Discord if build failed
         if: ${{ failure() && steps.build.outcome == 'failure' }}
         uses: rjstone/discord-webhook-notify@v1
@@ -89,7 +89,8 @@ jobs:
       - name: Get Committer Username
         id: get_username
         run: |
-          COMMITTER_NAME=$(git log -2 --pretty=format:'%cn' | tail -n 1)
+          git log -5
+          COMMITTER_NAME=$(git log -2 --pretty=format:'%an' | tail -n 1)
           echo "Committer Name: $COMMITTER_NAME"
           echo "username=$COMMITTER_NAME" >> $GITHUB_OUTPUT
 
