--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,8 +12,18 @@ on:
 jobs:
   check-health:
     runs-on: ubuntu-20.04
+    env:
+      URL: https://cx-pokedex-v2.fly.dev
     steps:
       - name: Check the deployed service
         uses: Jtalk/url-health-check-action@v3
         with:
-          url: https://cx-pokedex-v2.fly.dev
+          url: ${{ env.URL }}
+      - name: Broadcast success result to Discord
+        uses: rjstone/discord-webhook-notify@v1
+        if: success()
+        with:
+          severity: info
+          text: Scheduled health check passed for ${{ env.URL }}.
+          description: ${{ steps.check-health.outputs.summary }}
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
