--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -19,6 +19,14 @@ jobs:
         uses: Jtalk/url-health-check-action@v3
         with:
           url: ${{ env.URL }}
+      - name: Broadcast failure result to Discord
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with:
+          severity: error
+          text: Scheduled health check failed for ${{ env.URL }}.
+          description: ${{ steps.check-health.outputs.summary }}
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Broadcast success result to Discord
         uses: rjstone/discord-webhook-notify@v1
         if: success()
