--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
     branches: [ main ]
     types: [ opened, synchronize ]
-      
+  schedule:
+    - cron: '5 0 * * *'
 
 jobs:
   check-health:
