--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,19 +13,23 @@ on:
 jobs:
   check-health:
     runs-on: ubuntu-20.04
-    env:
-      URL: https://cx-pokedex-v2.fly.dev
     steps:
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Get the deployed service URL
+        id: get-url
+        run: |
+          URL = $(flyctl status | grep 'Hostname' | awk '{print "https://"$3}')
+          echo "deployed_url=$URL" >> $GITHUB_OUTPUT
       - name: Check the deployed service
         uses: Jtalk/url-health-check-action@v3
         with:
-          url: ${{ env.URL }}
+          url: ${{ steps.get-url.outputs.deployed_url }}
       - name: Broadcast failure result to Discord
         uses: rjstone/discord-webhook-notify@v1
         if: failure()
         with:
           severity: error
-          text: Scheduled health check failed for ${{ env.URL }}.
+          text: Scheduled health check failed for ${{ steps.get-url.outputs.deployed_url }}.
           description: ${{ steps.check-health.outputs.summary }}
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Broadcast success result to Discord
@@ -33,6 +37,6 @@ jobs:
         if: success()
         with:
           severity: info
-          text: Scheduled health check passed for ${{ env.URL }}.
+          text: Scheduled health check passed for ${{ steps.get-url.outputs.deployed_url }}.
           description: ${{ steps.check-health.outputs.summary }}
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
