--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -20,6 +20,8 @@ jobs:
         run: |
           URL = $(flyctl status | grep 'Hostname' | awk '{print "https://"$3}')
           echo "deployed_url=$URL" >> $GITHUB_OUTPUT
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Check the deployed service
         uses: Jtalk/url-health-check-action@v3
         with:
