--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,6 +14,10 @@ jobs:
   check-health:
     runs-on: ubuntu-20.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Get the deployed service URL
         id: get-url
