--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,11 +26,8 @@ jobs:
       - name: Print commit messages
         run: |
           echo "Commit Messages:"
-          for commit in ${{ toJson(github.event.commits) }}
-          do
-            echo $commit.message
-          done
-          
+          echo '${{ toJson(github.event.commits) }}' | jq -r '.[] | .message'
+
       - name: Get Committer Username
         id: get_username
         run: |
