--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,11 +23,16 @@ jobs:
         with:
           fetch-depth: 5
     
+      - name: Print GitHub event
+        run: |
+          echo "GitHub Event:"
+          echo '${{ toJson(github.event) }}'
+
       - name: Print commit messages
         run: |
           echo "Commit Messages:"
           echo '${{ toJson(github.event.commits) }}' | jq -r '.[] | .message'
-
+  
       - name: Get Committer Username
         id: get_username
         run: |
